--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>be.jorambarrez.activiti</groupId>
+    <groupId>org.activiti</groupId>
     <artifactId>basic-benchmark</artifactId>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <activiti.version>6.0.0-SNAPSHOT</activiti.version>
+        <activiti5.version>5.19.0.2</activiti5.version>
+        <activiti6.version>6.0.0.Beta3-SNAPSHOT</activiti6.version>
         <spring.version>4.1.5.RELEASE</spring.version>
     </properties>
 
@@ -14,7 +15,6 @@
 		<dependency>
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-engine</artifactId>
-			<version>${activiti.version}</version>
             <exclusions>
                 <exclusion>
                     <!-- Got some issues with the shaded jar and email. Excluded it, as email is not used in benchmark -->
@@ -26,7 +26,6 @@
 		<dependency>
 			<groupId>org.activiti</groupId>
 			<artifactId>activiti-spring</artifactId>
-			<version>${activiti.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
@@ -43,11 +42,11 @@
             <artifactId>postgresql</artifactId>
             <version>9.0-801.jdbc4</version>
         </dependency>
-        <dependency>
-            <groupId>com.oracle.jdbc</groupId>
-            <artifactId>ojdbc7</artifactId>
-            <version>12.1.0.1</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.oracle.jdbc</groupId>-->
+            <!--<artifactId>ojdbc7</artifactId>-->
+            <!--<version>12.1.0.1</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
@@ -108,6 +107,12 @@
             <artifactId>java-uuid-generator</artifactId>
             <version>3.1.4</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <repositories>
@@ -142,7 +147,7 @@
                         <transformers>
                             <transformer
                                     implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                <mainClass>be.jorambarrez.activiti.benchmark.Benchmark</mainClass>
+                                <mainClass>org.activiti.benchmark.Benchmark</mainClass>
                             </transformer>
                             <transformer
                                     implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
@@ -169,5 +174,60 @@
             </plugins>
         </pluginManagement>
     </build>
-
+    <profiles>
+        <profile>
+            <id>activiti5-engine</id>
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.activiti</groupId>
+                        <artifactId>activiti-engine</artifactId>
+                        <version>${activiti5.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.activiti</groupId>
+                        <artifactId>activiti-spring</artifactId>
+                        <version>${activiti5.version}</version>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>${basedir}/src/main/resources_activiti5</directory>
+                    </resource>
+                    <resource>
+                        <directory>${basedir}/src/main/resources</directory>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+        <profile>
+            <id>activiti6-engine</id>
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.activiti</groupId>
+                        <artifactId>activiti-engine</artifactId>
+                        <version>${activiti6.version}</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.activiti</groupId>
+                        <artifactId>activiti-spring</artifactId>
+                        <version>${activiti6.version}</version>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
+            <build>
+                <resources>
+                    <resource>
+                        <directory>${basedir}/src/main/resources_activiti6</directory>
+                    </resource>
+                    <resource>
+                        <directory>${basedir}/src/main/resources</directory>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+    </profiles>
 </project>
